# monte-carlo-symbolic-regression

./: .env.example  .gitignore  QUESTIONS.md  README.md  TODO.md  consignes_visualisations.md  pyproject.toml  requirements.txt
artifacts/checkpoints/: predictor_epoch_best.pt  predictor_epoch_final.pt  predictor_v2_final.pt
checkpoints/: mutator_final.pt  predictor_epoch_1.pt  predictor_epoch_2.pt  predictor_epoch_final.pt  predictor_v2_best.pt
configs/: dgsr_mcts.json  nmcs_default.json  puct_default.json  puct_nn.json  random_search.json  uct_default.json
logs/: val_DGSR_MCTS_20260326_153431.json  val_DGSR_MCTS_20260326_155444.json  val_DGSR_MCTS_20260326_160716.json  val_NMCTS_20260327_155535.json  val_NMCTS_20260327_160321.json  val_PUCT_20260324_173709.json  val_PUCT_20260324_175337.json  val_PUCT_20260324_191200.json  val_PUCT_20260324_191555.json  val_PUCT_20260325_114540.json  val_PUCT_20260325_114749.json  val_PUCT_20260325_115945.json  val_PUCT_20260325_121556.json  val_PUCT_20260325_122058.json  val_PUCT_20260325_140810.json  val_PUCT_mock.json  val_UCT_20260324_173702.json  val_UCT_20260324_175238.json  val_UCT_20260324_190255.json  val_UCT_20260325_141000.json  val_UCT_mock.json
ressources/: DGSR-MCTS.md  NMCS
sandbox/: create_expression.py  dataset.py  load_hf_pickle.py
scripts/: markdown.py  plot.py  run_test.py  run_validation.py  search.py  test.py  train.py  visualize_benchmark.py
scripts/training/: train.py  train_2.py  (+1 more)
src/: train.py  train_2.py  train_dgsr_mcts.py
tests/: dataset.py  test_expression.py  test_puct.py  test_uct.py
(+159 files in other folders)
