[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcsr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifultable>=1.1.0",
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "hf>=1.8.0",
    "huggingface-hub>=1.8.0",
    "numpy>=2.4.4",
    "prettytable>=3.17.0",
    "sympy>=1.14.0",
    "zss>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
